Bug 870652 - Add null ptr check in nsDNSRecord::ReportUnusable to avoid crashing r=mcmanus